enchance menu display with org.jline jline-terminal library*
Terminal does not seem to work well in windows

--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,19 @@
     </properties>
 
     <dependencies>
+        
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.16.0</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline-terminal</artifactId>
+            <version>3.25.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
