replace org.jline.jline-terminal with org.jline.jline-terminal-jna, which works on windows

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         
         <dependency>
             <groupId>org.jline</groupId>
-            <artifactId>jline-terminal</artifactId>
+            <artifactId>jline-terminal-jna</artifactId>
             <version>3.25.1</version>
         </dependency>
 
