--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <version>3.25.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline-reader</artifactId>
+            <version>3.25.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
