--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.dualboot.javazcrypt</groupId>
+    <groupId>com.github.oliveiradd.javazcrypt</groupId>
     <artifactId>javazcrypt</artifactId>
     <version>1.0.0</version>
 
@@ -56,7 +56,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.dualboot.javazcrypt.Main</mainClass>
+                            <mainClass>com.github.oliveiradd.javazcrypt.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
